objects/MMPJ_Ext_Vign_Facture__c.object
<CustomObject>
    <description>MMPJ Extranet Vigneron - used for both Cognac &amp; Champagne</description>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobAccount__c</fullName>
        <label>BlobAccount</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobContainer__c</fullName>
        <label>BlobContainer</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_BlobFile__c</fullName>
        <label>BlobFile</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Bouilleur__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bouilleur de profession</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Factures (BP)</relationshipLabel>
        <relationshipName>Factures_Bouilleurs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Courtier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>champ prévu à la base pour courtier
suite à un changement dans l&apos;intégration, on a fait des changements sur ce champ et le champ société(Tiers facturé)</description>
        <label>Tiers</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Factures (Courtier)</relationshipLabel>
        <relationshipName>Factures_Courtiers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_Facturation__c</fullName>
        <label>Date de Facturation</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Date_de_virement_banque__c</fullName>
        <label>Date de virement de la banque</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Document__c</fullName>
        <label>Document</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_FACTURE_Spirit__c</fullName>
        <externalId>true</externalId>
        <label>Clé Spirit 1</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Facture_Id_Apport__c</fullName>
        <externalId>true</externalId>
        <label>Clé Id Apport</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Facture_Nette__c</fullName>
        <label>Facture Nette</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Facture_Segmentation__c</fullName>
        <label>Segmentation</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Champagne</fullName>
                </value>
                <value>
                    <fullName>Cognac</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Libelle_Facture__c</fullName>
        <label>Libellé Facture</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Lien_Vers_Document__c</fullName>
        <formula>&quot;https://www.mmpjetmoi.fr/attachment/file/&quot;&amp;Id&amp;&quot;/&quot; &amp;  MMPJ_Ext_Vign_Societe__r.Id  &amp; &quot;?type=factures&quot;</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lien vers document</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_Ext_Vign_Societe__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Tiers Facturé</label>
        <referenceTo>MMPJ_Ext_Vign_Societe__c</referenceTo>
        <relationshipLabel>Factures</relationshipLabel>
        <relationshipName>Factures_Societe</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Annee__c</fullName>
        <label>Année</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Libelle2__c</fullName>
        <label>Libellé 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_Maison_Acheteuse__c</fullName>
        <label>Maison Acheteuse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MPJVR</fullName>
                </value>
                <value>
                    <fullName>MM</fullName>
                </value>
                <value>
                    <fullName>PJ</fullName>
                </value>
                <value>
                    <fullName>TL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MMPJ_XRM_clef_externe_facture__c</fullName>
        <externalId>true</externalId>
        <label>​clef_exte​​rne_facture</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Facture</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>MMPJ_Ext_Vign_Courtier__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MMPJ_Ext_Vign_Cognac</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>MMPJ_Ext_Vign_Societe__c</columns>
        <columns>MMPJ_Ext_Vign_Courtier__c</columns>
        <columns>MMPJ_Ext_Vign_Date_de_Facturation__c</columns>
        <columns>MMPJ_Ext_Vign_Document__c</columns>
        <columns>MMPJ_Ext_Vign_Facture_Nette__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>MMPJ_Ext_Vign_FACTURE_Spirit__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>MMPJ_Ext_Vign_Facture_Segmentation__c</field>
            <operation>equals</operation>
            <value>Cognac</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>MMPJ_Ext_Vign_Facture__c.MMPJ_Ext_Vign_Facture,MMPJ_Ext_Vign_Facture__c.MMPJ_Ext_Vign_Facture_Enlev</value>
        </filters>
        <label>MMPJ_Ext_Vign_Cognac</label>
        <language>fr</language>
        <sharedTo>
            <group>MMPJ_Ext_Vign_Global_PG_Cognac</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>N° Facture</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Factures</pluralLabel>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Appro</fullName>
        <active>true</active>
        <description>Champagne</description>
        <label>Facture d&apos;approvisionnement</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Facture</fullName>
        <active>true</active>
        <description>Cognac</description>
        <label>Facture</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Facture_Enlev</fullName>
        <active>true</active>
        <description>Cognac</description>
        <label>Facture d&apos;enlèvement</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Pressurage_et_Vinification</fullName>
        <active>true</active>
        <description>Champagne</description>
        <label>Facture de pressurage et vinification</label>
    </recordTypes>
    <recordTypes>
        <fullName>MMPJ_Ext_Vign_Prestservice</fullName>
        <active>true</active>
        <description>Champagne</description>
        <label>Prestation de services</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>